[gd_scene load_steps=7 format=3 uid="uid://xtp2aufdpn7i"]

[ext_resource type="Script" path="res://Character.gd" id="1_pnw3c"]
[ext_resource type="Texture2D" uid="uid://bjaifgpkief2m" path="res://Art/Real/Models/Cordelia_Overworld_Up.png" id="2_4e2uj"]
[ext_resource type="Texture2D" uid="uid://p14hv2eoeb3s" path="res://Art/Real/Models/Cordelia_Overworld_Down.png" id="3_fc2ck"]
[ext_resource type="Texture2D" uid="uid://c7kr2jgpx4tif" path="res://Art/Real/Models/Cordelia_Overworld_Left.png" id="4_h5ddf"]
[ext_resource type="Texture2D" uid="uid://bsiytwvtlw5tr" path="res://Art/Real/Models/Cordelia_Overworld_Right.png" id="5_njsl0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l6yyp"]
radius = 32.0
height = 64.0

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_pnw3c")

[node name="ModelUp" type="Sprite2D" parent="."]
position = Vector2(-2, -58)
texture = ExtResource("2_4e2uj")

[node name="ModelDown" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3, -62)
texture = ExtResource("3_fc2ck")

[node name="ModelLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(13, -56)
texture = ExtResource("4_h5ddf")

[node name="ModelRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-12, -55)
texture = ExtResource("5_njsl0")

[node name="BoundaryBox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_l6yyp")

[node name="LowBound" type="Marker2D" parent="."]

[node name="HighBound" type="Marker2D" parent="."]
